Modify MarkTaskDoneCommandTest